--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Apple-style-slideshow</title>
 	<link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 	<div class="main">
-		<div class="slides" id="slides">
-			<div class="slide">
-				<img src="./img/sample_slides/macbook.jpg" alt="" width="920" height="400">
-				<img src="./img/sample_slides/iphone.jpg" alt="" width="920" height="400">
-				<img src="./img/sample_slides/imac.jpg" alt="" width="920" height="400">
+		<div class="gallery">
+			<div class="slides" id="slides">
+				<div class="slide">
+					<img src="./img/sample_slides/macbook.jpg" alt="" width="920" height="400">
+					<img src="./img/sample_slides/iphone.jpg" alt="" width="920" height="400">
+					<img src="./img/sample_slides/imac.jpg" alt="" width="920" height="400">
+				</div>
+			</div>
+			<div class="menu" id="menu">
+				<ul>
+					<li class="fbar">&nbsp;</li>
+					<li class="menuItem"><a href=""><img src="img/sample_slides/thumb_macbook.png" /></a></li>
+					<li class="menuItem"><a href=""><img src="img/sample_slides/thumb_iphone.png" /></a></li>
+					<li class="menuItem"><a href=""><img src="img/sample_slides/thumb_imac.png" /></a></li>
+					<li class="menuItem"><a href=""><img src="img/sample_slides/thumb_about.png" alt="thumbnail" /></a>
+					</li>
+				</ul>
 			</div>
 		</div>
-		<div class="menu" id="menu">
-			<ul>
-			<li class="fbar">&nbsp;</li>
-			<li class="menuItem"><a href=""><img src="img/sample_slides/thumb_macbook.png" /></a></li>
-			<li class="menuItem"><a href=""><img src="img/sample_slides/thumb_iphone.png" /></a></li>
-			<li class="menuItem"><a href=""><img src="img/sample_slides/thumb_imac.png" /></a></li>
-			<li class="menuItem"><a href=""><img src="img/sample_slides/thumb_about.png" alt="thumbnail" /></a></li>
-			</ul>
-		</div>
+
 	</div>
-	
+
 </body>
+
 </html>
