--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Apple-style-slideshow</title>
 	<link rel="stylesheet" href="./style.css">
+	<script src="https://cdn.bootcss.com/jquery/1.4.2/jquery.min.js"></script>
 </head>
 
 <body>
@@ -13,8 +14,17 @@
 			<div class="slides" id="slides">
 				<div class="slide">
 					<img src="./img/sample_slides/macbook.jpg" alt="" width="920" height="400">
+				</div>
+				<div class="slide">
 					<img src="./img/sample_slides/iphone.jpg" alt="" width="920" height="400">
+				</div>
+				<div class="slide">
 					<img src="./img/sample_slides/imac.jpg" alt="" width="920" height="400">
+				</div>
+				<div class="slide">
+
+					<img src="img/sample_slides/info.jpg" width="920" height="400" alt="side" />
+
 				</div>
 			</div>
 			<div class="menu" id="menu">
@@ -30,7 +40,7 @@
 		</div>
 
 	</div>
-
+	<script src="./main.js"></script>
 </body>
 
 </html>
